adicionada a rota de validação do usuário e feita a doc da mesma
